fix(core): gaps between input chips are collapsing (#13118)

--- a/projects/core/components/textfield/textfield-multi/textfield-multi.style.less
+++ b/projects/core/components/textfield/textfield-multi/textfield-multi.style.less
@@ -270,6 +270,7 @@ tui-textfield[multi][multi] {
     });
 
     tui-textfield-item {
+        display: inline-table;
         transform: translateX(var(--t-scroll));
     }
 
